# pdf2cbz

./: .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  build.sh  main.py  pyproject.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
src/pdf2cbz/: __main__.py
tests/: test_util.py
